--- a/public/style.css
+++ b/public/style.css
@@ -9,13 +9,13 @@ html {
     background-size: cover;
 }
 nav {
-    background-color: rgb(0, 70, 108);
+    
+    background-image: linear-gradient(to right, rgb(226, 0, 139), lightseagreen);
     height: 100px;
     
     width: 100vw;
     
 }
-
 .alignleft {
     float: left;
     margin: 25px;
@@ -33,12 +33,9 @@ h1 {
     margin: 0px 250px;
 }
 div #textbox {
-    
     border: darkgrey solid 3px;
-    margin: 50px 100px;
-    
+    margin: 50px 100px; 
 }
-
 div #todo-container {
     border: solid 1px white;
     margin: 0px 250px;
@@ -46,10 +43,36 @@ div #todo-container {
     background-color: white;
     opacity: .85;
 }
-
 img {
     width: 64px;
     height: 64px;
     border-radius: 15%;
-    background-color: rgb(245, 239, 186);
+    border: lightseagreen solid 1px;
+    background-color: white;
+}
+.box {
+    border: solid darkgrey 3px;
+    background-color: white;
+    color: rgb(49, 49, 49);
+    border-radius: 5px;
+    text-align: center;
+    padding-top: 11%;
+}
+.box:nth-child(even) {
+    background-color: lightgrey;
+    color:  rgb(49, 49, 49);
+}
+.categories-container {
+    margin: 0px 250px;
+    background-color: white;
+    opacity: .90;
+    display: grid;
+    grid-gap: 15px;
+    padding-block-start: 15px;
+    padding-block-end: 15px;
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 175px 175px 175px;
+    grid-auto-flow: row;
 }
